# UniCloudOps

./: .dockerignore  .gitignore  README.md  check_logs.py  docker-compose.secure.yml  docker-compose.yml  fix_admin.sql  fix_password.sql  verify_adapters.py
.github/workflows/: publish-sdks.yml  supply_chain.yml
backend/: .dockerignore  .env.example  Dockerfile  celerybeat-schedule  check_db_connectivity.py  check_deployments.py  diag_azure.py  diag_azure_direct.py  diag_azure_subs.py  error_dump.txt  error_dump_utf8.txt  patch_adapters.py  requirements.txt  run_bulk_recovery.py  unicloudops.db  update_schema.py
backend/app/: main.py
backend/app/api/: cloudflare_service.py  contabo_service.py  deps.py  deps_rbac.py  gcp_service.py  pricing_service.py
backend/app/core/: ai_orchestrator.py  celery_app.py  config.py  crypto.py  encryption.py  event_crypto.py  events.py  licensing.py  risk_engine.py  sdk_auth.py  security.py
backend/blueprints/: aws_lb.tf
backend/scratch/: global_verification_suite.py  verify_multicloud_services.py
backend/tests/: test_health.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
sdk/go/: go.mod
sdk/java/: pom.xml
sdk/js/: README.md  example.js  unicloudops-sdk.js
sdk/python/: README.md  example.py  pyproject.toml  unicloudops_sdk.py
sdk/python/src/unicloudops/: __init__.py  client.py
sdk/python/src/unicloudops/core/: client.py
sdk/python/src/unicloudops/services/: events.py  finops.py  iam.py
sdk/typescript/: package.json
(+308 files in other folders)
